# Fix query parser error handling and range boundary bugs - `ZuliaSyntaxParser.jj`: `parseInt(Token)` now converts `NumberFormatException` into a proper `ParseException`, so decimal or overflowing counts in min-should-match, interval, fuzzy, wildcard, and slop positions (for example `(a b)@2.5`) report a clean parse error.   * Regenerated `ZuliaSyntaxParser.java` with the javacc task. - `ZuliaPointRangeQueryNodeBuilder`: exclusive int and long range bounds no longer overflow at the type extremes. A query like `intField:{2147483647 TO *]` now returns `MatchNoDocsQuery` instead of wrapping around and matching every document. - `ZuliaMultiFieldQueryNodeProcessor`: the `MULTI_FIELDS` null check now runs on the raw config value before `expandFields`, so the descriptive error fires instead of an opaque NPE message - `EscapeQuerySyntaxImpl`: update from Lucene 10.x (the previous version was from Lucene 9.x) - Add tests for all query parser fixes